--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/end build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/end build.data.gz",
-        frameworkUrl: buildUrl + "/end build.framework.js.gz",
-        codeUrl: buildUrl + "/end build.wasm.gz",
+        dataUrl: buildUrl + "/end build.data",
+        frameworkUrl: buildUrl + "/end build.framework.js",
+        codeUrl: buildUrl + "/end build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Client Project4",
